[tool.poetry]
name = "hw6"
version = "0.1.0"
description = ""
authors = ["SashaKuspys <134163412+SashaKuspys@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^19.13.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
